@@ -2922,6 +2922,21 @@ CREATE TABLE `user_auth_group_perms` (
 --
 
 --
+-- Table structure for table `user_auth_reset_hashes`
+--
+
+CREATE TABLE `user_auth_reset_hashes` (
+  `user_id` int(10) unsigned NOT NULL default '0',
+  `hash` varchar(100) NOT NULL default '',
+  `expiry` timestamp NOT NULL default '0000-00-00 00:00:00',
+  PRIMARY KEY (`user_id`,`expiry`)
+) ENGINE=InnoDB ROW_FORMAT=Dynamic COMMENT='Table that Contains User Password Reset Hashes';
+
+--
+-- Dumping data for table `user_auth_reset_hashes`
+--
+
+--
 -- Table structure for table `user_auth_group_realm`
 --
 
